# boost_log_python_poc

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  main.cpp  renovate.json  vcpkg.json
.github/workflows/: Linux-CI.yml  MacOS-CI.yml  Ubuntu-Noble-CI.yml  Windows-CI.yml  docker-hetzner-runners.yml  testflows-github-hetzner-runners.yml
script/: bootstrap  bootstrap-on-linux.sh  bootstrap-on-mac.sh  build  build.ps1  cibuild  docker-entrypoint.sh  package  package.ps1  test  test.ps1
